Changes menu to sliding animation. Had issues on mobile with stack aniation

--- a/src/styles/sidemenu.scss
+++ b/src/styles/sidemenu.scss
@@ -46,7 +46,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* General sidebar styles */
 .bm-menu {
    background: var(--gray-1);
-   padding-top: 35%;
+   padding-top: 40%;
    font-size: 1.15em;
    overflow-y: hidden !important;
 }
